# utility

./: .gitignore  AriaRpc.cpp  CMakeLists.txt  CMakePresets.json  Filesystem.cpp  Json.cpp  Launch.cpp  Logger.cpp  Network.cpp  Random.cpp  String.cpp  Utility.cpp
Crash/: CrashPad.cpp
Crypto/: CMakeLists.txt  Hash.cpp
EventBus/: EventBus.cpp
FileSystem/: CMakeLists.txt  DumpFile.cpp  Filesystem.cpp
Json/: AriaRpc.cpp  CMakeLists.txt  Json.cpp
Log/: CMakeLists.txt  Logger.cpp
Math/: CMakeLists.txt  Random.cpp
Network/: CMakeLists.txt  Socket.cpp  UserAgent.cpp
Process/: CMakeLists.txt  Launch.cpp  Terminate.cpp
Raii/: raii.cpp
String/: CMakeLists.txt  Encoding.cpp  Format.cpp  Match.cpp  Replace.cpp  Trim.cpp
include/Container/: PageList.h
include/Crypto/: Hash.h
include/EventBus/: EventBase.h  EventBus.h
include/FileSystem/: DumpFile.h  Filesystem.h
include/Json/: AriaRpc.h  Json.h
include/Math/: CorrectValue.h  Random.h
include/Network/: Socket.h  UserAgent.h
include/Process/: Launch.h  Terminate.h
include/RAII/: Raii.h
include/String/: Encoding.h  Format.h  Match.h  Replace.h  Trim.h
include/Utility/: DllExport.h
include/Utility/Crypto/: Hash.h
include/Utility/EventBus/: EventBase.h  EventBus.h
include/Utility/FileSystem/: DumpFile.h  Filesystem.h
include/Utility/Json/: AriaRpc.h  AriaRpcEnum.h  AriaStatus.h  Json.h
include/Utility/Math/: CorrectValue.h  Random.h
include/Utility/Network/: Socket.h  UserAgent.h
include/Utility/Process/: Launch.h  Terminate.h
include/Utility/String/: Encoding.h  Format.h  Match.h  Replace.h  Trim.h  Type.h
lib/: CMakeLists.txt  Utility.cpp
lib/Container/: PageList.cpp
lib/Crypto/: CMakeLists.txt
lib/EventBus/: CMakeLists.txt  EventBus.cpp
lib/FileSystem/: CMakeLists.txt  DumpFile.cpp  Filesystem.cpp
lib/Json/: AriaRpc.cpp  CMakeLists.txt  Json.cpp
lib/Math/: CMakeLists.txt
lib/Network/: CMakeLists.txt  Socket.cpp
lib/Process/: CMakeLists.txt  Launch.cpp  Terminate.cpp
lib/Raii/: CMakeLists.txt
lib/String/: CMakeLists.txt  Format.cpp  Match.cpp
test/: CMakeLists.txt  UtilityCrypto.cpp  UtilityEventBus.cpp  UtilityFilesystem.cpp  UtilityFilesystem.h  UtilityJson.cpp  UtilityJson.h  UtilityMath.cpp  UtilityMath.h  UtilityProcess.cpp  UtilityProcess.h  UtilityString.cpp  UtilityString.h
